--- a/MapExlporePage.html
+++ b/MapExlporePage.html
@@ -27,7 +27,7 @@
   <p> Double-Click on a mark</br>See what happens ; &#41;</p> <!-- i should make this always visible regardless of window size -->
   <div id="map" class = "mainMap">
 </div>
-<div i = "homeDiv"> <a href = "index.html"> Go back Home </a> </div>
+<!-- <div i = "homeDiv"> <a href = "index.html"> Go back Home </a> </div> -->
 <div id = "modalDiv"></div>
       
     <script type = "module">
