--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <div class="container">
         <h1 class="text-center"> HearHere </h1>
-        <h1 class="text-center small"> <small>A Sonic Map by Clarence </small></h1>
+        <h1 class="text-center small"> <small>A Sonic Map </small></h1>
         <div>
             <h3 class="text-right">
                 <ul>
